--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasourse.url=jdbc:h2:mem:apitest
+spring.datasourse.driverClassName=org.h2.Driver
+spring.datasourse.username=sa
+spring.datasourse.password=password
 
+spring.h2.console.enabled=true
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
